# proxy/docs/swagger.yaml
@@ -70,4 +70,28 @@ paths:
           schema:
             $ref: '#/definitions/main.ErrorResponse'
       summary: Get Geo Coordinates
+  /api/address/search:
+    post:
+      description: This endpoint allows you to get geo coordinates by address
+      parameters:
+      - description: Address search query
+        in: body
+        name: address
+        required: true
+        schema:
+          $ref: '#/definitions/main.RequestAddressSearch'
+      responses:
+        "200":
+          description: Успешное выполнение
+          schema:
+            $ref: '#/definitions/main.ResponseAddress'
+        "400":
+          description: Ошибка запроса
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "500":
+          description: Ошибка подключения к серверу
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Get Geo Coordinates
 swagger: "2.0"
