# proxy/main.go
@@ -27,7 +27,7 @@ import (
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host petstore.swagger.io
-// @BasePath /v2
+// @BasePath
 type RequestAddressSearch struct {
 	Query string `json:"query"`
 }
@@ -56,6 +56,7 @@ type ErrorResponse struct {
 // @Description This endpoint allows you to get geo coordinates by address
 // @Param address body RequestAddressSearch true "Address search query"
 // @Router /api/address/geocode [post]
+// @Router /api/address/search [post]
 // @Success 200 {object} ResponseAddress "Успешное выполнение"
 // @Success 400 {object} ErrorResponse "Ошибка запроса"
 // @Success 500 {object} ErrorResponse "Ошибка подключения к серверу"
